# poetry-source-env-zp

./: .tool-versions  pyproject.toml
poetry_source_env_zp/: plugin.py
